--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,7 @@
-<h1>This is the home page</h1>
+<h1>This is the about page</h1>
 
 <%= link_to 'Home', root_path%>
 
-<p>This is also here</p>
+<%= image_tag 'about.jpg' %>
+
+<p>This is also here for some reason</p>
