Add edit, update, show, index listing

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Create an article<h2>
+<h1>Edit existing article</h1>
 
 <% if @article.errors.any? %>
 <h1>The following errors prevented the article from getting created</h2>
