--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <h1>This is the about page</h1>
 
-<%= link_to 'Home', root_path%>
+<%= link_to 'Back to home', root_path%>
 
 <%= image_tag 'about.jpg' %>
 
