--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
     <%= render 'layouts/navigation' %>
     <%= render 'layouts/messages' %>
 
+    <div class='container'>
     <%= yield %>
+    </div>
+    <%= render 'layouts/footer'%>
   </body>
 </html>
