--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -39,6 +39,12 @@ $navbar-default-bg: #000000;
 .btn-xlarge {
     font-size: 1.7em;
     background-color: black;
+    color: white;
+    border: 1px solid #eaeaea;
+}
+
+.btn-xlarge:hover {
+    background-color: white;
 }
 
 .article-actions{
